<resources>
    <string name="app_name_aplicacion">All in One</string>
    <string name="app_titulo_General">All in One</string>

    <!--HINT-->
    <string name="app_number1">Primer valor</string>
    <string name="app_number2">Segundo valor</string>
    <string name="app_insert_text">Insert text</string>
    <string name="app_name">Name</string>
    <string name="app_other_informations">Otros</string>


    <!--Operaciones-->
    <string name="app_title_Operaciones">Opeaciones</string>
    <string name="app_sumar">Sumar</string>
    <string name="app_restar">Restar</string>
    <string name="app_division">Division</string>
    <string name="app_resultado">Resultado</string>
    <string name="app_msg_button">Calcular</string>
    <string name="app_add">Add</string>
    <string name="app_guardar">Guardar</string>

    <!--Spinner-->
    <string name="app_spinner">Spinner</string>


    <!--CHECKOBX-->
    <string name="app_title_ChecBox">Checkbox</string>


    <!--RADIO BUTTON-->
    <string name="app_RadioButtonTitlle">Radio Botton</string>


    <!--Layouts-->
    <string name="app_Layout">Layouts</string>
    <string name="app_relative_layout">Relative Layout</string>
    <string name="app_grip_layout">Grip Layout</string>


    <!--List Views-->
    <string name="app_title_ListViewTitle">ListView</string>

    <!--Recycle Layout-->
    <string name="app_recycle">Recycle View</string>
    <string name="app_home">Home</string>
    <string name="app_clean_list">Clean List</string>
    <string name="app_ImageButton">Image Button</string>
    <string name="app_Put_bundle">Put_bundle</string>
    <string name="app_Web_View">Web_View</string>
    <string name="app_revelar">Revelar datos</string>
    <string name="app_cerrar">Cerrar</string>
    <string name="app_buscar">Buscar</string>

    <!--CARD VIEWS-->
    <string name="app_Large_Text">Large Text</string>
    <string name="app_name_pets">Pet´s Name</string>
    <string name="app_edad">Edad</string>
    <string name="app_color">color</string>
    <string name="app_genero">genero</string>
    <string name="app_descripcion">Descrip.</string>
    <string name="app_raza">raza</string>
    <string name="app_identificacion"># identidad</string>


    <!--Share preferences-->
    <string name="app_share_preferences">Share preferences</string>
    <string name="app_contactos">Contactos</string>


    <!--Manejo de archivos-->
    <string name="app_manejo_archivo">Manejo de archivos</string>

    <!--SD-->
    <string name="app_tarjeta_SD">TARJETA SD</string>


    <!--Base de datos SQL LITE-->
    <string name="app_baseDatos">SQLite</string>
    <string name="app_crud_SQlite_Crear">Registrar Producto</string>
    <string name="app_crud_SQlite_Actualizar">Modificar Producto</string>
    <string name="app_crud_SQlite_Eliminar">Eliminar Producto</string>
    <string name="app_crud_SQlite_Buscar">Buscar Producto</string>

    <string name="app_SQlite_codigo">Registrar codigo</string>
    <string name="app_cantidad">Cantidad</string>
    <string name="app_precio">Precio del producto</string>


    <!--Frame Layout-->
    <string name="app_aparecer">Aparecer</string>
    <string name="app_frame_layout">Frame Layout</string>


    <!--scroll view-->
    <string name="app_scrollView">Scroll View</string>


    <!--Sound pool y MEdia player-->
    <string name="app_media_player">Media Player</string>
    <string name="app_sound_pool">SoundPoll</string>
    <string name="app_reproductormusica">Reproductor de musica</string>


    <!--Grabadora-->
    <string name="app_grabacion">Media Recorder</string>

    <!--Multilenguaje-->
    <string name="app_titulo_multilenguaje">Multilenguaje</string>
    <string name="app_saludos">Saludos</string>
    <string name="app_despedida">Despedida</string>


    <!--Menu OverFlow-->
    <string name="app_actionButton">Action Buttons</string>
    <string name="app_opcion1">Opcion 1</string>
    <string name="app_opcion2">Opcion 2</string>
    <string name="app_opcion3">Opcion 3</string>

    <!--Fotografia-->
    <string name="app_fotografia">Fotografia</string>

    <!--Grabacion de video-->
    <string name="app_grabacion_video">Record video</string>

    <!--Diseño responsibo-->
    <string name="app_responsive">Responsive</string>

    <!--Rodvels-->
    <string name="app_rodvels">Rodvels</string>
    <string name="app_button">Button</string>


</resources>