<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_principal"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/transparent_black" />

    <!--Header-->
    <TextView
        android:id="@+id/textViewMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/font_poetsenone_regular"
        android:gravity="center"
        android:text="@string/app_titulo_General"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="italic|bold" />

    <!--TABLA DE BOTONES-->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view_header"
        android:layout_margin="20dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <!--Primer fila-->
        <TableRow>
            <!-- Columna 1 -->
            <!--SPINNER-->
            <Button
                android:id="@+id/btnSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/Footer"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/coral"
                android:onClick="sendToButtonSpinner"
                android:text="SPINNER" />

            <!--LIST VIEW-->
            <Button
                android:id="@+id/btnList_activityMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnSpinner"
                android:backgroundTint="@color/naranja"
                android:onClick="sendToButtonListView"
                android:text="@string/app_title_ListViewTitle" />

            <!--RADIO BUTTONS-->
            <Button
                android:id="@+id/btnRadioButtonMain_activityMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnList_activityMain"
                android:backgroundTint="@color/crimsom"
                android:onClick="sendToButtonRadioButton"
                android:text="RadioButton" />


        </TableRow>

        <!--Segunda fila-->
        <TableRow>
            <!--CheckBox-->
            <Button
                android:id="@+id/btnCheckboxButton_activityMain"
                android:layout_width="match_parent"
                android:backgroundTint="@color/amarillo_verde"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_above="@id/btnRadioButtonMain_activityMain"
                android:onClick="sendToButtonCheckBox"
                android:text="@string/app_title_ChecBox" />

            <!--Layouts-->
            <Button
                android:id="@+id/btnLayouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnCheckboxButton_activityMain"
                android:backgroundTint="@color/turquoise"
                android:onClick="sendToLayouts"
                android:text="@string/app_Layout" />

            <!--RelativeLayout-->
            <Button
                android:id="@+id/btnRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnLayouts"
                android:backgroundTint="@color/transparent_yellow"
                android:onClick="sendToLayoutRelative"
                android:text="@string/app_relative_layout" />
        </TableRow>


        <!--Tercera fila-->

        <TableRow>

            <!-- ImageButton -->
            <Button
                android:id="@+id/btnImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnGripLayout"
                android:backgroundTint="@color/violeta"
                android:onClick="sendToImagenButton"
                android:text="@string/app_ImageButton" />

            <!-- Put and Bundle -->
            <Button
                android:id="@+id/btnPutBundle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnImageButton"
                android:backgroundTint="@color/rosa"
                android:onClick="sendToPutBundle"
                android:text="@string/app_Put_bundle"
                android:textColor="@color/black" />

            <!-- Web View -->
            <Button
                android:id="@+id/btnWebView_Main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btnPutBundle"
                android:backgroundTint="@color/lavanda"
                android:onClick="sendToWebView"
                android:text="@string/app_Web_View"
                android:textColor="@color/black" />
        </TableRow>


        <!--Cuarta fila-->
        <TableRow>

            <Button
                android:id="@+id/btnGripLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/salmon"
                android:onClick="sendToGripLayouts"
                android:text="@string/app_grip_layout" />

            <Button
                android:id="@+id/btnRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde_militar"
                android:onClick="sendToCardViewRecycleView"
                android:text="@string/app_recycle" />

            <Button
                android:id="@+id/btnSharePreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde_militar3"
                android:onClick="sendToSharePreferences"
                android:text="@string/app_share_preferences"
                android:textColor="@color/white" />


        </TableRow>


        <!--Quinta fila-->
        <TableRow>

            <Button
                android:id="@+id/btnSharePreferencesContactos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_gray"
                android:onClick="sendToContactosPreferencias"
                android:text="@string/app_contactos" />

            <Button
                android:id="@+id/btnManejoArchivos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent_gold"
                android:onClick="sendToManejoArchivos"
                android:text="@string/app_manejo_archivo" />

            <Button
                android:id="@+id/btnTarjetaSD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_steel"
                android:onClick="sendTotarjetaSD"
                android:text="@string/app_tarjeta_SD" />
        </TableRow>


        <!--Sexta fila-->
        <TableRow>

            <Button
                android:id="@+id/btnSQLite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="sendToSqlLite"
                android:text="@string/app_baseDatos"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pastel_orange"
                android:onClick="sendToFrameLayout"
                android:text="@string/app_frame_layout"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pastel_red"
                android:onClick="sendToScrolView"
                android:text="@string/app_scrollView"
                android:textColor="@color/black"
                android:textStyle="bold"/>



        </TableRow>


        <!--Septima fila-->
        <TableRow>

            <Button
                android:id="@+id/btnSounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/naranja"
                android:onClick="sendToSound"
                android:text="@string/app_sound_pool"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnReproductorMusica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rojo"
                android:onClick="sendToReproductorMusica"
                android:text="@string/app_reproductormusica"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/btnGrabadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:onClick="sendToGrabadora"
                android:text="@string/app_grabacion"
                android:textColor="@color/white"/>
        </TableRow>

        <!--Octava fila fila-->
        <TableRow>

            <Button
                android:id="@+id/btnMultilenguaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/naranja"
                android:onClick="sendToMultilenguaje"
                android:text="@string/app_titulo_multilenguaje"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/turquesa"
                android:onClick="sendToActionBar"
                android:text="@string/app_actionButton"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnFotografia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:onClick="sendToFotografia"
                android:text="@string/app_fotografia"
                android:textColor="@color/white"/>
        </TableRow>

        <!--Novena fila fila-->
        <TableRow>

            <Button
                android:id="@+id/btnGrabacionVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/crimsom"
                android:onClick="sendToReproductorVideo"
                android:text="@string/app_grabacion_video"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnResponsive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/naranja"
                android:onClick="sendToResponsive"
                android:text="@string/app_responsive"
                android:textColor="@color/white"/>

        </TableRow>

    </TableLayout>
</RelativeLayout>