<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <androidx.cardview.widget.CardView
        android:id="@+id/user_card_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar_images"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPetsName_CardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="cursive"
                    android:text="@string/app_name_pets"
                    android:textSize="34dp"
                    android:textStyle="bold" />

                <!--Identificacion-->
                <TextView
                    android:id="@+id/identidad_CardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/app_identificacion"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <!--Descripcion-->
                <TextView
                    android:id="@+id/descripcion_CardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fontFamily="@font/font_aacifico_regular"
                    android:layout_weight="1"
                    android:text="@string/app_descripcion"
                    android:textSize="15dp" />

                <!--Raza-->
                <TextView
                    android:id="@+id/raza_CardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fontFamily="@font/font_dancing"
                    android:layout_weight="1"
                    android:text="@string/app_raza"
                    android:textSize="15dp" />

                <!--Edad-->
                <TextView
                    android:id="@+id/edad_CardView"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/font_dancing"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/app_edad"
                    android:textSize="15dp" />

                <!--Genero-->
                <TextView
                    android:id="@+id/genero_CardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fontFamily="@font/font_dancing"
                    android:layout_weight="1"
                    android:text="@string/app_genero"
                    android:textSize="15dp" />

                <!--Color-->
                <TextView
                    android:id="@+id/color_CardView"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/font_dancing"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/app_color"
                    android:textSize="15dp" />
            </LinearLayout> <!-- Esta etiqueta cierra el segundo LinearLayout -->
        </LinearLayout> <!-- Esta etiqueta cierra el primer LinearLayout -->
    </androidx.cardview.widget.CardView>
</LinearLayout> <!-- Esta etiqueta cierra el LinearLayout principal -->
