<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferencias">


    <TextView
        android:id="@+id/textViewSharePreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_steel"
        android:fontFamily="@font/font_poetsenone_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_share_preferences"
        android:textColor="@color/pastel_blue"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextSharePreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/app_insert_text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSharePreferences" />


    <Button
        android:id="@+id/btnSharePreferences2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_add"
        android:onClick="mensaje"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextSharePreferences" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/preferencias"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>